FIXED ui private-info overflow -> scroll

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -22,6 +22,7 @@ html, body {
 #private-info {
     position: absolute;
     display: none;
+    max-height: 600px;
 }
 #private-basic, #private-general, #private-depts_and_visas, #private-supervisor {
     background: black;
