--- a/public/css/util.css
+++ b/public/css/util.css
@@ -1,11 +1,25 @@
+.scrollbar::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+.scrollbar::-webkit-scrollbar {
+	width: 12px;
+	background-color: #F5F5F5;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
 .navbar-inverse .navbar-brand {
     color: rgba(235, 235, 235, 1);
 }
 .interact {
-    font-size: 18px;
+    font-size: 16px;
 }
 .note-public {
-    font-size: 16px;
+    font-size: 14px;
 }
 .express {
     color: rgba(235, 235, 235, 1);
@@ -14,13 +28,13 @@
     color: rgba(0, 0, 0, 1);
 }
 .express-large {
-    font-size: 22px;
-}
-.express-medium {
     font-size: 20px;
 }
-.express-small {
+.express-medium {
     font-size: 18px;
+}
+.express-small {
+    font-size: 16px;
 }
 .input-group {
     width: 100%;
